--- a/src/units/_units.scss
+++ b/src/units/_units.scss
@@ -1,2 +1,7 @@
 $base_rem: 16px;
 $default_ms: 300ms;
+$padding_pixel_base: 2px;
+$padding_rem_base: 1rem;
+$padding_em_base: 1em;
+$padding_vw_base: 1vw;
+$padding_vh_base: 1vh;
